fixed user  auth, and overflow

--- a/components/headers/header.module.css
+++ b/components/headers/header.module.css
@@ -3,7 +3,7 @@
     background-color: beige;
     position: fixed;
     width: 100%;
-    z-index: 1000;
+    z-index: 4;
     display: flex;
     justify-content: center;
     align-items: center;
